# reward-shaping

./: .pre-commit-config.yaml  README.md  pyproject.toml  reward_shaping.ipynb  scratch.ipynb
docs/: conf.py  index.md
docs/api/: core.md
logs/experiment_Best_Ever/: evaluations.csv  qtable.csv  value_update_timesteps.json
logs/experiment_ExampleBigPBRSModified/: evaluations.csv  qtable.csv  value_update_timesteps.json
logs/experiment_ExampleGettingCloser/: evaluations.csv  qtable.csv  value_update_timesteps.json
logs/experiment_ExampleLargeLake/: evaluations.csv  qtable.csv  value_update_timesteps.json
logs/experiment_ExampleLargeLakeQInit/: evaluations.csv  qtable.csv  value_update_timesteps.json
logs/experiment_ExampleLargePBRS/: evaluations.csv  qtable.csv  value_update_timesteps.json
logs/experiment_ExampleSmallLake/: evaluations.csv  qtable.csv  value_update_timesteps.json
logs/experiment_ExampleSmallPBRS/: evaluations.csv  qtable.csv  value_update_timesteps.json
reward_shaping/: __init__.py  core.py  plotting.py  wrappers.py
tests/: test_core.py  test_plotting.py  test_wrappers.py
tmp/: evaluations.csv  value_update_timesteps.json
